--- a/degree_planner.html
+++ b/degree_planner.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
     <link href='https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.css' rel='stylesheet' />
-    <script src="https://apis.google.com/js/api.js"></script> <!-- Google API Client Library -->
+    <script src="https://apis.google.com/js/api.js"></script>
     <style>
         :root {
             --primary: #003A74;
@@ -1074,10 +1074,11 @@
 
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@5.11.3/main.min.js'></script>
     <script>
-        const semesterCourses = {
+        // Load persisted data from localStorage
+        let semesterCourses = JSON.parse(localStorage.getItem('semesterCourses')) || {
             'freshman-fall': [
-                { code: 'PHY 203', name: 'Physics I for Physicists', days: ['M', 'W', 'F'], startTime: '09:00', endTime: '10:00', credits: 4, type: 'core', instructor: 'Dr. Smith' },
-                { code: 'MAT 127', name: 'Calculus A', days: ['T', 'R'], startTime: '10:00', endTime: '11:30', credits: 4, type: 'math', instructor: 'Prof. Johnson' }
+                { code: 'PHY 203', name: 'Physics I for Physicists', days: ['M', 'W', 'F'], startTime: '09:00', endTime: '10:00', credits: 4, type: 'core', instructor: 'Dr. Smith', completed: true },
+                { code: 'MAT 127', name: 'Calculus A', days: ['T', 'R'], startTime: '10:00', endTime: '11:30', credits: 4, type: 'math', instructor: 'Prof. Johnson', completed: true }
             ],
             'freshman-spring': [],
             'sophomore-fall': [],
@@ -1087,14 +1088,19 @@
             'senior-fall': [],
             'senior-spring': []
         };
-
-        const availableCourses = [
+        let availableCourses = JSON.parse(localStorage.getItem('availableCourses')) || [
             ...semesterCourses['freshman-fall'],
             { code: 'PHY 204', name: 'Physics II for Physicists', days: ['M', 'W', 'F'], startTime: '10:30', endTime: '11:30', credits: 4, type: 'core', instructor: 'Dr. Brown' },
             { code: 'MAT 128', name: 'Calculus B', days: ['T', 'R'], startTime: '13:00', endTime: '14:30', credits: 4, type: 'math', instructor: 'Prof. Davis' }
         ];
+        let currentMajor = localStorage.getItem('currentMajor') || 'Not Set';
 
-        let currentMajor = localStorage.getMajor ? localStorage.getMajor : 'Not Set';
+        // Function to save state to localStorage
+        function saveState() {
+            localStorage.setItem('semesterCourses', JSON.stringify(semesterCourses));
+            localStorage.setItem('availableCourses', JSON.stringify(availableCourses));
+            localStorage.setItem('currentMajor', currentMajor);
+        }
 
         function openModal(mode = 'add', semesterId = '', courseId = '', major = false) {
             const modal = document.getElementById(major ? 'majorModal' : 'courseModal');
@@ -1126,7 +1132,6 @@
 
             const submitHandler = (e) => {
                 e.preventDefault();
-                console.log('Form submitted for mode:', mode, 'semesterId:', semesterId, 'courseId:', courseId, 'major:', major);
                 if (major) addMajorSubmit();
                 else if (mode === 'add') addCourseSubmit(semesterId);
                 else editCourseSubmit(courseId);
@@ -1168,12 +1173,10 @@
         }
 
         function addCourse(semesterId) {
-            console.log('Opening modal for semester:', semesterId);
             openModal('add', semesterId);
         }
 
         function addCourseSubmit(semesterId) {
-            console.log('Processing addCourseSubmit for semester:', semesterId);
             const code = document.getElementById('courseCode').value.trim();
             const name = document.getElementById('courseName').value.trim();
             const credits = document.getElementById('courseCredits').value.trim();
@@ -1184,7 +1187,6 @@
             const instructor = document.getElementById('courseInstructor').value.trim();
 
             if (!code || !name || !credits || !type || days.length === 0 || !startTime || !endTime) {
-                console.log('Validation failed:', { code, name, credits, type, days, startTime, endTime });
                 alert('Please fill in all required fields, including at least one day and valid times.');
                 return;
             }
@@ -1192,7 +1194,6 @@
             const courseId = code.toLowerCase().replace(/\s+/g, '');
             const container = document.getElementById(semesterId);
             if (!container) {
-                console.error('Container not found for semesterId:', semesterId);
                 alert('Invalid semester selected.');
                 return;
             }
@@ -1217,7 +1218,8 @@
                 </div>
             `;
             container.insertAdjacentHTML('beforeend', courseHTML);
-            console.log('Course added to DOM:', courseId);
+            semesterCourses[semesterId].push({ code, name, days, startTime, endTime, credits, type, instructor, completed: false });
+            saveState();
             updateStats(semesterId);
             updateCalendar();
             syncToGoogleCalendar([{
@@ -1232,26 +1234,17 @@
         function editCourse(courseId) { openModal('edit', '', courseId); }
 
         function loadCourseData(courseId) {
-            const courseCard = document.querySelector(`[data-course="${courseId}"]`);
-            const code = courseCard.querySelector('.course-code').textContent;
-            const name = courseCard.querySelector('.course-name').textContent;
-            const scheduleText = courseCard.querySelector('.course-schedule span').textContent;
-            const credits = parseInt(scheduleText.split(' • ')[scheduleText.split(' • ').length - 1]);
-            const [daysPart, timePart] = scheduleText.split(' • ')[0].split(' ');
-            const [startTime, endTime] = timePart.split('-');
-            const days = daysPart.split('');
-            const type = courseCard.querySelector('.course-tag').textContent.toLowerCase();
-            const instructor = courseCard.querySelector('.course-instructor span').textContent;
-
-            document.getElementById('courseCode').value = code;
-            document.getElementById('courseName').value = name;
-            document.getElementById('courseCredits').value = credits;
-            document.getElementById('courseType').value = type;
-            document.getElementById('courseDays').value = days;
-            document.getElementById('courseStartTime').value = startTime;
-            document.getElementById('courseEndTime').value = endTime;
-            document.getElementById('courseInstructor').value = instructor === 'TBA' ? '' : instructor;
-            document.getElementById('courseSelect').value = code;
+            const semesterId = Object.keys(semesterCourses).find(sem => semesterCourses[sem].find(c => c.code.toLowerCase().replace(/\s+/g, '') === courseId));
+            const course = semesterCourses[semesterId].find(c => c.code.toLowerCase().replace(/\s+/g, '') === courseId);
+            document.getElementById('courseCode').value = course.code;
+            document.getElementById('courseName').value = course.name;
+            document.getElementById('courseCredits').value = course.credits;
+            document.getElementById('courseType').value = course.type;
+            document.getElementById('courseDays').value = course.days;
+            document.getElementById('courseStartTime').value = course.startTime;
+            document.getElementById('courseEndTime').value = course.endTime;
+            document.getElementById('courseInstructor').value = course.instructor || '';
+            document.getElementById('courseSelect').value = course.code;
         }
 
         function editCourseSubmit(courseId) {
@@ -1264,6 +1257,11 @@
             const endTime = document.getElementById('courseEndTime').value;
             const instructor = document.getElementById('courseInstructor').value;
 
+            const semesterId = Object.keys(semesterCourses).find(sem => semesterCourses[sem].find(c => c.code.toLowerCase().replace(/\s+/g, '') === courseId));
+            const courseIndex = semesterCourses[semesterId].findIndex(c => c.code.toLowerCase().replace(/\s+/g, '') === courseId);
+            semesterCourses[semesterId][courseIndex] = { code, name, days: days.split(''), startTime, endTime, credits, type, instructor, completed: semesterCourses[semesterId][courseIndex].completed };
+            saveState();
+
             const courseCard = document.querySelector(`[data-course="${courseId}"]`);
             const scheduleText = `${days} ${startTime}-${endTime}`;
             courseCard.querySelector('.course-code').textContent = code;
@@ -1273,7 +1271,6 @@
             courseCard.querySelector('.course-schedule span').textContent = `${scheduleText} • ${credits} credits`;
             courseCard.querySelector('.course-instructor span').textContent = instructor || 'TBA';
             courseCard.setAttribute('data-course', code.toLowerCase().replace(/\s+/g, ''));
-            const semesterId = courseCard.closest('.courses-container').id;
             updateStats(semesterId);
             updateCalendar();
             syncToGoogleCalendar([{
@@ -1287,21 +1284,25 @@
 
         function deleteCourse(courseId) {
             if (confirm('Are you sure you want to delete this course?')) {
+                const semesterId = Object.keys(semesterCourses).find(sem => semesterCourses[sem].find(c => c.code.toLowerCase().replace(/\s+/g, '') === courseId));
+                semesterCourses[semesterId] = semesterCourses[semesterId].filter(c => c.code.toLowerCase().replace(/\s+/g, '') !== courseId);
+                saveState();
                 const courseCard = document.querySelector(`[data-course="${courseId}"]`);
-                const semesterId = courseCard.closest('.courses-container').id;
                 courseCard.remove();
                 updateStats(semesterId);
                 updateCalendar();
-                // Remove from Google Calendar (placeholder)
-                console.log('Remove event from Google Calendar:', courseId);
             }
         }
 
         function toggleCourse(checkbox) {
-            checkbox.classList.toggle('checked');
             const courseCard = checkbox.closest('.course-card');
+            const courseId = courseCard.dataset.course;
+            const semesterId = Object.keys(semesterCourses).find(sem => semesterCourses[sem].find(c => c.code.toLowerCase().replace(/\s+/g, '') === courseId));
+            const course = semesterCourses[semesterId].find(c => c.code.toLowerCase().replace(/\s+/g, '') === courseId);
+            course.completed = !course.completed;
+            saveState();
+            checkbox.classList.toggle('checked');
             courseCard.classList.toggle('completed');
-            const semesterId = courseCard.closest('.courses-container').id;
             updateStats(semesterId);
             updateCalendar();
         }
@@ -1323,11 +1324,19 @@
             e.preventDefault();
             const container = e.target.closest('.courses-container');
             if (container && draggedCourse) {
+                const courseId = draggedCourse.dataset.course;
+                const oldSemesterId = Object.keys(semesterCourses).find(sem => semesterCourses[sem].find(c => c.code.toLowerCase().replace(/\s+/g, '') === courseId));
+                const course = semesterCourses[oldSemesterId].find(c => c.code.toLowerCase().replace(/\s+/g, '') === courseId);
+                semesterCourses[oldSemesterId] = semesterCourses[oldSemesterId].filter(c => c.code.toLowerCase().replace(/\s+/g, '') !== courseId);
+                const newSemesterId = container.id;
+                semesterCourses[newSemesterId].push(course);
+                saveState();
                 container.insertBefore(draggedCourse, container.querySelector('.add-course-btn'));
                 container.classList.remove('drag-over');
                 draggedCourse.classList.remove('dragging');
                 draggedCourse = null;
-                updateStats(container.id);
+                updateStats(oldSemesterId);
+                updateStats(newSemesterId);
                 updateCalendar();
             }
         }
@@ -1419,7 +1428,6 @@
         }
 
         function generateCalendarEvents(semesterId) {
-            console.log('Generating events for semester:', semesterId);
             const [yearPart, seasonPart] = semesterId.split('-');
             const year = yearPart === 'freshman' ? 2024 : yearPart === 'sophomore' ? 2025 : yearPart === 'junior' ? 2026 : 2027;
             const startMonth = seasonPart === 'fall' ? 8 : 1;
@@ -1429,7 +1437,6 @@
             const container = document.getElementById(semesterId);
 
             if (container) {
-                console.log('Container found:', container.id);
                 const courses = container.querySelectorAll('.course-card');
                 courses.forEach(course => {
                     const code = course.querySelector('.course-code').textContent;
@@ -1455,8 +1462,6 @@
                         currentDate.setDate(currentDate.getDate() + 1);
                     }
                 });
-            } else {
-                console.error('Container not found for semesterId:', semesterId);
             }
 
             return events;
@@ -1493,47 +1498,31 @@
             window.calendar.render();
         }
 
-        function getEventColor(type) {
-            const colors = {
-                core: '#bfdbfe',
-                math: '#fbcfe8',
-                'core-req': '#fde68a',
-                option: '#a7f3d0',
-                capstone: '#c7d2fe'
-            };
-            return colors[type] || '#d1d5db';
-        }
-
         function addMajor() {
-            console.log('Opening major modal');
             openModal('add', '', '', true);
         }
 
         function addMajorSubmit() {
-            console.log('Processing addMajorSubmit');
             const majorName = document.getElementById('majorName').value.trim();
             if (!majorName) {
-                console.log('Validation failed: Major name is empty');
                 alert('Please enter a major name.');
                 return;
             }
             currentMajor = majorName;
-            localStorage.setItem('major', majorName);
+            saveState();
             document.getElementById('currentMajor').textContent = majorName;
-            console.log('Major saved:', majorName);
+            updateStats('freshman-fall');
             closeModal();
-            updateStats('freshman-fall'); // Trigger stats update to reflect major change
         }
 
         function initGoogleCalendar() {
             gapi.load('client:auth2', () => {
                 gapi.client.init({
-                    apiKey: 'YOUR_API_KEY', // Replace with your API key from Google Cloud Console
-                    clientId: '515503606305-jrcs5fprmkaqnqpja8u3c4g23hku892p.apps.googleusercontent.com', // Your provided client ID
+                    apiKey: 'YOUR_API_KEY',
+                    clientId: '515503606305-jrcs5fprmkaqnqpja8u3c4g23hku892p.apps.googleusercontent.com',
                     discoveryDocs: ['https://www.googleapis.com/discovery/v1/apis/calendar/v3/rest'],
                     scope: 'https://www.googleapis.com/auth/calendar'
                 }).then(() => {
-                    console.log('Google Calendar API initialized');
                     gapi.auth2.getAuthInstance().isSignedIn.listen(updateSigninStatus);
                     updateSigninStatus(gapi.auth2.getAuthInstance().isSignedIn.get());
                 }, (error) => {
@@ -1544,7 +1533,6 @@
 
         function updateSigninStatus(isSignedIn) {
             if (isSignedIn) {
-                console.log('User is signed in to Google Calendar');
             } else {
                 gapi.auth2.getAuthInstance().signIn();
             }
@@ -1552,7 +1540,6 @@
 
         function syncToGoogleCalendar(events) {
             if (!gapi.auth2.getAuthInstance().isSignedIn.get()) {
-                console.log('User not signed in, skipping sync');
                 return;
             }
             events.forEach(event => {
@@ -1560,7 +1547,6 @@
                     calendarId: 'primary',
                     resource: event
                 }).then(response => {
-                    console.log('Event created: ', response.result);
                 }, error => {
                     console.error('Error creating event:', error);
                 });
@@ -1568,7 +1554,6 @@
         }
 
         function syncWithGoogleCalendar() {
-            console.log('Syncing with Google Calendar');
             initGoogleCalendar();
             const allEvents = [];
             Object.keys(semesterCourses).forEach(semesterId => {
@@ -1594,6 +1579,33 @@
         }
 
         window.onload = () => {
+            // Render persisted courses
+            Object.keys(semesterCourses).forEach(semesterId => {
+                const container = document.getElementById(semesterId);
+                semesterCourses[semesterId].forEach(course => {
+                    const courseId = course.code.toLowerCase().replace(/\s+/g, '');
+                    const scheduleText = `${course.days.join('')} ${course.startTime}-${course.endTime}`;
+                    const courseHTML = `
+                        <div class="course-card${course.completed ? ' completed' : ''}" data-course="${courseId}" draggable="true" ondragstart="handleDragStart(event)">
+                            <div class="course-actions">
+                                <button class="action-btn" onclick="editCourse('${courseId}')"><i class="fas fa-edit"></i></button>
+                                <button class="action-btn" onclick="deleteCourse('${courseId}')"><i class="fas fa-trash"></i></button>
+                            </div>
+                            <div class="course-header">
+                                <div class="course-checkbox${course.completed ? ' checked' : ''}" onclick="toggleCourse(this)"><i class="fas fa-check"></i></div>
+                                <div class="course-info">
+                                    <div class="course-code">${course.code}</div>
+                                    <div class="course-name">${course.name}</div>
+                                    <div class="course-meta"><div class="course-tag tag-${course.type}">${course.type.charAt(0).toUpperCase() + course.type.slice(1)}</div></div>
+                                    <div class="course-schedule"><i class="fas fa-clock"></i><span>${scheduleText} • ${course.credits} credits</span></div>
+                                    <div class="course-instructor"><i class="fas fa-chalkboard-teacher"></i><span>${course.instructor || 'TBA'}</span></div>
+                                </div>
+                            </div>
+                        </div>
+                    `;
+                    container.insertAdjacentHTML('beforeend', courseHTML);
+                });
+            });
             updateStats('freshman-fall');
             document.getElementById('semesterSelect').value = 'freshman-fall';
             updateCalendar();
